[gd_scene load_steps=20 format=3 uid="uid://cu1ki33hfpate"]

[ext_resource type="PackedScene" uid="uid://2rfx1hshs6rn" path="res://Scene/player.tscn" id="1_1nxxk"]
[ext_resource type="Script" uid="uid://cjlfpd4sbydp4" path="res://Scripts/main_room.gd" id="1_d82uo"]
[ext_resource type="Texture2D" uid="uid://b6tfeto8svdlv" path="res://Assets/floor.png" id="2_j86dn"]
[ext_resource type="PackedScene" uid="uid://cmem1vcrcu3qa" path="res://Scene/button.tscn" id="2_p5rcu"]
[ext_resource type="PackedScene" uid="uid://cbp1ggbqgqax0" path="res://Scene/door.tscn" id="3_c1qhk"]
[ext_resource type="Texture2D" uid="uid://c2a5lfpii3kxb" path="res://Assets/platform  (20251216033825).png" id="3_j86dn"]
[ext_resource type="PackedScene" uid="uid://qgkp6r76te3w" path="res://Scene/spikes.tscn" id="5_rl3wi"]
[ext_resource type="FontFile" uid="uid://bqdpte3m2v88p" path="res://Assets/Higher Jump.ttf" id="6_clytc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1nxxk"]
size = Vector2(260, 206)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p5rcu"]
size = Vector2(180, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c1qhk"]
size = Vector2(140, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d82uo"]
size = Vector2(180, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rl3wi"]
size = Vector2(140, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_clytc"]
size = Vector2(309, 197)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xp5ko"]
size = Vector2(20, 720)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j86dn"]
size = Vector2(20, 720)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vdd4y"]
size = Vector2(1280, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ns0wk"]
size = Vector2(1280, 80)

[sub_resource type="LabelSettings" id="LabelSettings_d82uo"]
font = ExtResource("6_clytc")

[node name="MainRoom" type="Node2D"]
script = ExtResource("1_d82uo")
metadata/_edit_horizontal_guides_ = [540.0, 360.0, 180.0, 534.0]
metadata/_edit_vertical_guides_ = [1280.0, 640.0, 320.0, 960.0, 22.0]

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = 3.0
offset_right = 1280.0
offset_bottom = 723.0
color = Color(0.6480781, 0.64807814, 0.6480781, 1)

[node name="EntrancePlatform" type="StaticBody2D" parent="." groups=["group a", "group b"]]
position = Vector2(100, 550)

[node name="Sprite2D" type="Sprite2D" parent="EntrancePlatform"]
position = Vector2(-91.99999, 90)
scale = Vector2(0.40185186, 0.31851852)
texture = ExtResource("2_j86dn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntrancePlatform"]
position = Vector2(-103, 94)
shape = SubResource("RectangleShape2D_1nxxk")

[node name="ColorRect" type="ColorRect" parent="EntrancePlatform"]
visible = false
offset_left = -100.0
offset_top = -10.0
offset_right = 20.0
offset_bottom = 89.0
color = Color(0, 1, 0.960784, 1)

[node name="ButtonPlatform" type="StaticBody2D" parent="." groups=["group b"]]
position = Vector2(655, 195)

[node name="Sprite2D" type="Sprite2D" parent="ButtonPlatform"]
position = Vector2(-8, -0.25)
scale = Vector2(0.27407408, 0.049537037)
texture = ExtResource("3_j86dn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButtonPlatform"]
position = Vector2(-15, 0)
shape = SubResource("RectangleShape2D_p5rcu")

[node name="ColorRect" type="ColorRect" parent="ButtonPlatform"]
visible = false
offset_left = -100.0
offset_top = -15.0
offset_right = 70.0
offset_bottom = 15.0
color = Color(0, 1, 0.960784, 1)

[node name="Button" parent="ButtonPlatform" instance=ExtResource("2_p5rcu")]
position = Vector2(-15, -11)

[node name="MidLeftPlatform" type="StaticBody2D" parent="." groups=["group a"]]
position = Vector2(350, 375)

[node name="Sprite2D" type="Sprite2D" parent="MidLeftPlatform"]
position = Vector2(-23.999979, 0)
scale = Vector2(0.22037038, 0.046296287)
texture = ExtResource("3_j86dn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MidLeftPlatform"]
position = Vector2(-30, 0)
shape = SubResource("RectangleShape2D_c1qhk")

[node name="ColorRect" type="ColorRect" parent="MidLeftPlatform"]
visible = false
offset_left = -100.0
offset_top = -15.0
offset_right = 40.0
offset_bottom = 15.0
color = Color(0, 1, 0.960784, 1)

[node name="CenterPlatform" type="StaticBody2D" parent="."]
position = Vector2(639, 466)

[node name="Sprite2D" type="Sprite2D" parent="CenterPlatform"]
position = Vector2(7.49998, 0)
scale = Vector2(0.28055555, 0.046296295)
texture = ExtResource("3_j86dn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterPlatform"]
shape = SubResource("RectangleShape2D_d82uo")

[node name="ColorRect" type="ColorRect" parent="CenterPlatform"]
visible = false
offset_left = -90.0
offset_top = -15.0
offset_right = 90.0
offset_bottom = 15.0
color = Color(0, 1, 0.960784, 1)

[node name="MidRightPlatform" type="StaticBody2D" parent="." groups=["group a"]]
position = Vector2(970, 375)

[node name="Sprite2D" type="Sprite2D" parent="MidRightPlatform"]
position = Vector2(-4.500073, 0)
scale = Vector2(0.21944442, 0.046296295)
texture = ExtResource("3_j86dn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MidRightPlatform"]
position = Vector2(-10, 0)
shape = SubResource("RectangleShape2D_rl3wi")

[node name="ColorRect" type="ColorRect" parent="MidRightPlatform"]
visible = false
offset_left = -80.0
offset_top = -15.0
offset_right = 60.0
offset_bottom = 15.0
color = Color(0, 1, 0.960784, 1)

[node name="DoorPlatform" type="StaticBody2D" parent="." groups=["group b"]]
position = Vector2(1220, 518)

[node name="Sprite2D" type="Sprite2D" parent="DoorPlatform"]
position = Vector2(106, 117.000015)
scale = Vector2(0.47407407, 0.30277777)
texture = ExtResource("2_j86dn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorPlatform"]
position = Vector2(94.5, 120.5)
shape = SubResource("RectangleShape2D_clytc")

[node name="ColorRect" type="ColorRect" parent="DoorPlatform"]
visible = false
offset_left = -60.0
offset_top = 22.0
offset_right = 60.0
offset_bottom = 122.0
color = Color(0, 1, 0.960784, 1)

[node name="LeftWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(10, 360)
shape = SubResource("RectangleShape2D_xp5ko")

[node name="RightWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(1270, 360)
shape = SubResource("RectangleShape2D_j86dn")

[node name="Ceiling" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceiling"]
position = Vector2(640, 10)
shape = SubResource("RectangleShape2D_vdd4y")

[node name="Ground" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(640, 680)
shape = SubResource("RectangleShape2D_ns0wk")

[node name="ColorRect" type="ColorRect" parent="Ground"]
offset_top = 640.0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.0594334, 0.0593918, 0.104636, 1)

[node name="Player" parent="." instance=ExtResource("1_1nxxk")]
position = Vector2(77, 460)

[node name="Door" parent="." instance=ExtResource("3_c1qhk")]
position = Vector2(1240, 500)

[node name="UI" type="CanvasLayer" parent="."]

[node name="BugLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 60.0
offset_bottom = 43.0
label_settings = SubResource("LabelSettings_d82uo")

[node name="GroundSpikes" type="Node" parent="."]

[node name="Spikes" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(150, 643)

[node name="Spikes2" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(183, 643)

[node name="Spikes3" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(216, 643)

[node name="Spikes4" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(249, 643)

[node name="Spikes5" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(282, 643)

[node name="Spikes6" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(314, 643)

[node name="Spikes7" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(347, 643)

[node name="Spikes8" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(380, 643)

[node name="Spikes9" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(413, 643)

[node name="Spikes10" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(446, 643)

[node name="Spikes11" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(479, 643)

[node name="Spikes12" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(512, 643)

[node name="Spikes13" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(545, 643)

[node name="Spikes14" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(578, 643)

[node name="Spikes15" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(611, 643)

[node name="Spikes16" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(645, 643)

[node name="Spikes17" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(679, 643)

[node name="Spikes18" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(712, 643)

[node name="Spikes19" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(746, 643)

[node name="Spikes20" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(779, 643)

[node name="Spikes21" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(812, 643)

[node name="Spikes22" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(845, 643)

[node name="Spikes23" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(878, 643)

[node name="Spikes24" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(911, 643)

[node name="Spikes25" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(944, 643)

[node name="Spikes26" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(977, 643)

[node name="Spikes27" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(1010, 643)

[node name="Spikes28" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(1043, 643)

[node name="Spikes29" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(1077, 643)

[node name="Spikes30" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(1111, 643)

[node name="Spikes31" parent="GroundSpikes" instance=ExtResource("5_rl3wi")]
position = Vector2(1145, 643)

[node name="CeilingSpikes" type="Node" parent="."]

[node name="Spikes" parent="CeilingSpikes" groups=["group b"] instance=ExtResource("5_rl3wi")]
position = Vector2(576, 207)
rotation = 3.1415927

[node name="Spikes2" parent="CeilingSpikes" groups=["group b"] instance=ExtResource("5_rl3wi")]
position = Vector2(608, 207)
rotation = 3.1415927

[node name="Spikes3" parent="CeilingSpikes" groups=["group b"] instance=ExtResource("5_rl3wi")]
position = Vector2(641, 207)
rotation = 3.1415927

[node name="Spikes4" parent="CeilingSpikes" groups=["group b"] instance=ExtResource("5_rl3wi")]
position = Vector2(673, 207)
rotation = 3.1415927

[node name="GameCamera" type="Camera2D" parent="."]
position = Vector2(638, 358)
